tests/pass/shadow.c
int i;
int main()
{
    int i;
    {
        int i;
    }
}
