tests/fail/prove.c
int main()
{
    a;
    __prove(0);
}